--- a/index.css
+++ b/index.css
@@ -181,3 +181,36 @@ body {
     transform: translateX(0%);
   }
 }
+
+.alert-container {
+  width: 12em;
+  position: absolute;
+  top: 1em;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0.625em;
+}
+
+.alert {
+  width: 100%;
+  padding: 0.5em 0.25em;
+  margin-bottom: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.25em;
+  background-color: #bfbfbf;
+  background-image: linear-gradient(62deg, #bfbfbf 0%, #e4e4e4 100%);
+  text-align: center;
+  font-weight: 600;
+  opacity: 1;
+  transition: opacity 300ms ease-out;
+}
+
+.alert:last-child {
+  margin-bottom: 0;
+}
+
+.alert.hide {
+  opacity: 0;
+}
