--- a/index.css
+++ b/index.css
@@ -199,8 +199,7 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 0.25em;
-  background-color: #bfbfbf;
-  background-image: linear-gradient(62deg, #bfbfbf 0%, #e4e4e4 100%);
+  background-color: #fbbc04;
   text-align: center;
   font-weight: 600;
   opacity: 1;
